Should now work on all windows systems with jdk >=11